# appoinment_management

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pytest.ini  README.md  pyproject.toml
.code_quality/: .flake8  mypy.ini
app/: bootstrap.py
app/appointment_management/: bootstrap.py  configurations.py
app/appointment_management/adapters/: __init__.py  calendar.py  db.py  dynamo.py  notifications.py  openai.py
app/appointment_management/domain/: __init__.py  commands.py  enums.py  exceptions.py  models.py  ports.py
app/appointment_management/entrypoints/: dtos.py  web.py
app/appointment_management/services/: handler_manager.py  handlers.py  process_request.py  process_request_strategies.py
app/commons/: __init__.py  base_types.py  logs.py
app/domain/: enums.py
app/services/: handlers.py  manager.py
test/appointment_management/services/: test_process_request.py
