[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["jval7 <jhonvalderramaa7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.3"
email-validator = "^2.1.1"
openai = "^1.33.0"
pydantic-settings = "^2.3.3"
requests = "^2.32.3"
black = "^24.4.2"
boto3 = "^1.34.131"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 140
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | .venv
    | env
    | .env
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''